--- a/static/css/main.less
+++ b/static/css/main.less
@@ -1,5 +1,9 @@
 @import "packages/bootstrap/bootstrap/less/bootstrap.less";
 
+#new-topic-title {
+    width: 450px;
+}
+
 #topicText {
     width: 450px;
     min-height: 283px;
@@ -13,4 +17,90 @@
 .preview {
     border: 2px dotted #CCC;
     min-height: 12px;
+}
+
+.login-action {
+    padding-top: 35px;
+    padding-left: 50px;
+    display: block;
+    font-size: 25px;
+
+}
+
+.divider-vertical {
+    width: 2px;
+    height: 40px;
+    border-right: 1px solid #CCC;
+}
+
+
+.row.topic   {
+    margin: 5px 0 5px 15px;
+    border-top: 1px solid #eee;
+    padding: 10px;
+}
+
+.row.topic .text {
+    margin-top: 10px;
+}
+
+.topic .title a{
+    font-size: 17px;
+    color: #1259C7;
+}
+
+.topic .media-grid img {
+    width: 100px;
+    height: 75px;
+}
+
+.topic .media-grid a {
+    margin: 0;
+}
+
+.votes, .answers {
+        margin: 0 3px 5px 0;
+}
+
+.votes,.views,.answers {
+    height: 38px;
+
+    padding: 5px;
+
+    padding: 0 0 7px 0;
+    text-align: center;
+}
+
+.votes {
+        color: #555;
+        cursor: pointer;
+}
+
+.views {
+    color: #999;
+
+}
+
+.answers {
+    color: #75845C;
+}
+.accepted {
+        font-size: 190%;
+        color: #75845C;
+        float: right;
+}
+
+.mini-counts {
+    height: 25px;
+    font-size: 190%;
+    font-weight: bold;
+}
+
+.who {
+    float: right;
+    width: 160px;
+}
+
+.who .details img {
+    float: left;
 }
