--- a/templates/topic-new.html
+++ b/templates/topic-new.html
@@ -13,22 +13,37 @@
                     </div>
                 </div>
                 <div class="control-group">
-
+                    <label class="control-label" for="topicText">Text</label>
                     <div class="controls">
                         <textarea class="input-xlarge" id="topicText" rows="3"></textarea>
                     </div>
                 </div>
                 <div class="control-group">
+                    <label class="control-label" for="topicText">Preview</label>
                     <div class="controls">
                         <div class="preview">
-
-                            efdlkfdkj
                         </div>
                     </div>
                 </div>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">Create Topic</button>
-                    <button class="btn">Cancel</button>
+                <div class="login-please loggedout row" style="display: none;">
+                    <div class="span2 offset2">
+                        <a class="login-action" href="#">log in</a>
+                    </div>
+                    <div class="span1">
+                        <div class="divider-vertical" />
+                        <div class="or-divider">or</div>
+                        <div class="divider-vertical" />
+                    </div>
+                    <div class="span2">
+                        <label>email</label>
+                        <input type="text" name="email" />
+                        <label>password</label>
+                        <input type="password" name="password" />
+                    </div>
+                </div>
+                <div class="form-actions" >
+                    <button class="btn btn-primary create">Create Topic</button>
+                    <button class="btn cancel">Cancel</button>
                 </div>
             </fieldset>
         </form>
