--- a/templates/topic-summary.html
+++ b/templates/topic-summary.html
@@ -1,10 +1,10 @@
 <div class="row">
-    <div class="span8">
+    <div class="span9">
         <div class="row">
             <div class="span=2">
                 <a href="#/topics/new" class="btn success">New Topic</a>
             </div>
-            <div class="span6">
+            <div class="offset1 span6">
                 <ul class="nav nav-pills topicFilter">
                     <li class="active" data-sort="0"><a href="#">Recent</a></li>
                     <li  data-sort="1"><a href="#">Votes</a></li>
@@ -17,7 +17,7 @@
         <div class="row topics">
         </div>
     </div>
-    <div class="span4">
+    <div class="span3">
         <h5>
             Related Tags
         </h5>
