Starting a show page

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -104,3 +104,17 @@
 .who .details img {
     float: left;
 }
+
+
+.topic-show h1 {
+    font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif;
+    font-size: 180%;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #555;
+}
+
+.topic-show h1 a {
+    color: black;
+}
+
+
