--- a/templates/topic-row.html
+++ b/templates/topic-row.html
@@ -10,7 +10,7 @@
                 <div>Answers</div>
             </div>
             <div class="views">
-                <span class="count">0</span> Views
+                <span class="count">{{views}}</span> Views
             </div>
         </div>
         <div class="span7">
