Show topic summary on the topic list

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -110,6 +110,7 @@
     font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif;
     font-size: 180%;
     margin-bottom: 20px;
+    margin-left: 20px;
     border-bottom: 1px solid #555;
 }
 
@@ -117,4 +118,59 @@
     color: black;
 }
 
+.topic-show .main-section {
+    border-bottom: 1px solid #555;
+    padding-bottom: 30px;
+}
 
+.topic-show .upvote, .topic-show .downvote {
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.topic-show .favorite {
+    font-size: 25px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.myvote {
+        text-shadow: 2px 2px 4px black ;
+}
+
+.topic-show .question_total {
+    height: 25px;
+    font-size: 31px;
+    font-weight: bold;
+    margin-top: 14px;
+    margin-bottom: 5px;
+}
+
+.topic-show .side-menu {
+    color: #999;
+    text-align: center;
+}
+
+.topic-show .text {
+    zoom: 1.15;
+    padding-right: 20px;
+}
+
+.topic-show .asked {
+    font-size: 10px;
+}
+
+.topic-show .asked-ago {
+    font-weight: bold;
+}
+
+.topic-show .owner {
+    background-color: #E0EAF1;
+    width: 190px;
+    float: right;
+    padding: 7px;
+}
+
+.topic-show .owner img {
+    float: left;
+}
