--- a/templates/topic-row.html
+++ b/templates/topic-row.html
@@ -1,12 +1,12 @@
-<div class="row topic">
+<div class="row topic" id="{{_id}}">
     <div class="row">
         <div class="span1">
             <div class="votes">
-                <div class="mini-counts">0</div>
+                <div class="mini-counts">..</div>
                 <div>Votes</div>
             </div>
             <div class="answers">
-                <div class="mini-counts">5</div>
+                <div class="mini-counts">..</div>
                 <div>Answers</div>
             </div>
             <div class="views">
