upvote, downvote, removevote working.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -128,6 +128,10 @@
     cursor: pointer;
 }
 
+.topic-show .upvote:hover, .topic-show .downvote:hover {
+    color: @blue;
+}
+
 .topic-show .favorite {
     font-size: 25px;
     cursor: pointer;
