--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="span1 side-menu">
                 <div class="upvote help" title="This question shows research effort; it is useful and clear (click again to undo)" >&#9650;</div>
-                <div class="question_total">0</div>
+                <div class="question_total" data-upvotes="0" data-downvotes="0">..</div>
                 <div class="downvote help" title="This question does not show any research effort; it is unclear or not useful (click again to undo)" >&#9660;</div>
                 <div class="help favorite" title="This is a favorite question (click again to undo)" >&#9734;</div>
             </div>
