bad impl of update changes for counts. about to revert

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -119,8 +119,11 @@
 }
 
 .topic-show .main-section {
-    border-bottom: 1px solid #555;
     padding-bottom: 30px;
+}
+
+.answers-section {
+    margin-top: 30px;
 }
 
 .topic-show .upvote, .topic-show .downvote {
