--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -40,6 +40,9 @@
                 </div>
             </div>
         </div>
+        <div class="row answers-section">
+            <h1>Answers</h1>
+        </div>
     </div>
     <div class="span3">
         <h5>
