--- a/static/css/main.less
+++ b/static/css/main.less
@@ -4,7 +4,8 @@
     width: 450px;
 }
 
-#topicText {
+
+.new-topic textarea {
     width: 450px;
     min-height: 283px;
 }
@@ -111,7 +112,7 @@
     font-size: 180%;
     margin-bottom: 20px;
     margin-left: 20px;
-    border-bottom: 1px solid #555;
+    border-bottom: 1px solid #AAA;
 }
 
 .topic-show h1 a {
@@ -180,4 +181,20 @@
 
 .topic-show .owner img {
     float: left;
+}
+
+.topic-show .answer {
+    border-bottom: 1px solid #AAA;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+
+.topic-show .your-answer {
+    margin-left: 0 !important;
+}
+
+.topic-show .your-answer textarea {
+    width: 690px;
+    min-height: 208px;
 }
