--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -41,7 +41,14 @@
             </div>
         </div>
         <div class="row answers-section">
-            <h1>Answers</h1>
+                <h1>Answers</h1>
+        </div>
+
+        <div class="row your-answer">
+            <h3>Your Answer</h3>
+            <textarea rows="3" name="your-answer" id="topicText"></textarea>
+            <div class="preview"/>
+            <button class="btn post-answer">Post Your Answer</button>
         </div>
     </div>
     <div class="span3">
