Works now with new dashboard.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -1,5 +1,9 @@
 @import "packages/bootstrap/bootstrap/less/bootstrap.less";
 
+div.container[role="main"] {
+    margin-top: 35px;
+}
+
 #new-topic-title {
     width: 450px;
 }
