--- a/templates/topic-row.html
+++ b/templates/topic-row.html
@@ -29,7 +29,9 @@
                 </div>
             </div>
             <div class="tags">
+                {{#if false}}
                 <span class="label notice">javascript</span> <span class="label notice">libraries</span> <span class="label">project-x</span> <span class="label">working-group</span>
+                {{/if}}
             </div>
         </div>
     </div>
