--- a/templates/topic-summary.html
+++ b/templates/topic-summary.html
@@ -2,7 +2,7 @@
     <div class="span9">
         <div class="row">
             <div class="span=2">
-                <a href="#/topics/new" class="btn success">New Topic</a>
+                <a href="#/topics/new" class="btn btn-success">New Topic</a>
             </div>
             <div class="offset1 span6">
                 <ul class="nav nav-pills topicFilter">
