Link to login from new page.
Make listing pages have shorter text.Add a welcome message.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -4,6 +4,21 @@ div.container[role="main"] {
     margin-top: 35px;
 }
 
+.welcome-message {
+    background-color: #FFEFC6;
+    color: #735005;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding-top: 8px;
+    padding: 0 8px 2px 8px;
+    margin-bottom: 10px;
+}
+
+.welcome-message h5 {
+    margin: 4px 0;
+}
+
 #new-topic-title {
     width: 450px;
 }
