--- a/templates/topic-new.html
+++ b/templates/topic-new.html
@@ -26,22 +26,11 @@
                     </div>
                 </div>
                 <div class="login-please loggedout row" style="display: none;">
-                    <div class="span2 offset2">
-                        <a class="login-action" href="#">log in</a>
-                    </div>
-                    <div class="span1">
-                        <div class="divider-vertical" />
-                        <div class="or-divider">or</div>
-                        <div class="divider-vertical" />
-                    </div>
-                    <div class="span2">
-                        <label>email</label>
-                        <input type="text" name="email" />
-                        <label>password</label>
-                        <input type="password" name="password" />
+                    <div class="span3 offset3">
+                        <a class="login-action" href="#">Please log in</a>
                     </div>
                 </div>
-                <div class="form-actions" >
+                <div class="form-actions" style="display: none;">
                     <button class="btn btn-primary create">Create Topic</button>
                     <button class="btn cancel">Cancel</button>
                 </div>
