--- a/templates/topic-summary.html
+++ b/templates/topic-summary.html
@@ -18,6 +18,10 @@
         </div>
     </div>
     <div class="span3">
+        <div class="welcome-message">
+            <h5>Welcome!</h5>
+            This is a collaboratively edited question and answer site.
+        </div>
         <h5>
             Related Tags
         </h5>
