--- a/templates/topic-row.html
+++ b/templates/topic-row.html
@@ -18,7 +18,7 @@
                 <a href="#/topics/{{_id}}/{{slug}}">{{title}}</a>
             </div>
             <p class="small text">
-                {{text}}
+                {{short_text}}
             </p>
             <div class="who">
                 Asked <span class="asked-ago">{{timestamp_formatted}}</span>
