Add localstorage cache for forms to help with writing posts before login.

--- a/templates/topic-new.html
+++ b/templates/topic-new.html
@@ -15,7 +15,7 @@
                 <div class="control-group">
                     <label class="control-label" for="topicText">Text</label>
                     <div class="controls">
-                        <textarea class="input-xlarge" id="topicText" rows="3"></textarea>
+                        <textarea class="input-xlarge" id="topicText" rows="3" name="topicText"></textarea>
                     </div>
                 </div>
                 <div class="control-group">
