--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row topic-show">
     <div class="span9 main-section">
-        <div class="row">
+        <div class="row question">
             <div class="span1 side-menu">
                 <div class="upvote help" title="This question shows research effort; it is useful and clear (click again to undo)" >&#9650;</div>
                 <div class="question_total" data-upvotes="0" data-downvotes="0">..</div>
@@ -50,10 +50,12 @@
         </div>
 
         <div class="row your-answer">
-            <h3>Your Answer</h3>
-            <textarea rows="3" name="your-answer" id="topicText"></textarea>
-            <div class="preview"/>
-            <button class="btn post-answer">Post Your Answer</button>
+            <form>
+                <h3>Your Answer</h3>
+                <textarea rows="3" name="your-answer" id="topicText"></textarea>
+                <div class="preview"/>
+                <button class="btn post-answer">Post Your Answer</button>
+            </form>
         </div>
     </div>
     <div class="span3">
