Adding answer voting.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -191,6 +191,11 @@ div.container[role="main"] {
     font-weight: bold;
 }
 
+.topic-show .owner.answer-owner {
+    background-color: transparent !important;
+
+}
+
 .topic-show .owner {
     background-color: #E0EAF1;
     width: 190px;
@@ -211,6 +216,7 @@ div.container[role="main"] {
 
 .topic-show .your-answer {
     margin-left: 0 !important;
+    margin-top: 30px;
 }
 
 .topic-show .your-answer textarea {
