--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -48,7 +48,9 @@
         <div class="row answers-section">
                 <h1>Answers</h1>
         </div>
+        <div class="answers-section-content">
 
+        </div>
         <div class="row your-answer">
             <form>
                 <h3>Your Answer</h3>
