--- a/static/css/main.less
+++ b/static/css/main.less
@@ -55,7 +55,7 @@ div.container[role="main"] {
 
 
 .row.topic   {
-    margin: 5px 0 5px 15px;
+    margin: 0 0 5px 15px;
     border-top: 1px solid #eee;
     padding: 10px;
 }
@@ -98,6 +98,8 @@ div.container[role="main"] {
 
 .views {
     color: #999;
+    padding-bottom: 0 !important;
+    height: 20px;
 
 }
 
