small fix for duplicate render bug

--- a/templates/topic-summary.html
+++ b/templates/topic-summary.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row topic-summary">
     <div class="span9">
         <div class="row">
             <div class="span=2">
