--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -43,6 +43,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="topic-comment-section">
+                        <div class="topic-comments">
+
+                        </div>
+                        <form style="display: none;">         
+                            <div class="span6">
+                                <textarea name="comment" rows="4" cols="80"></textarea>
+                            </div>
+                            <div class="span2">
+                                <button class="btn add-comment">Add Comment</button>
+                            </div>
+                        </form>
+                        <a class="comment-link help" title="Ask author for clarification about this post">add comment</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row answers-section">
