--- a/templates/topic-answer.html
+++ b/templates/topic-answer.html
@@ -23,8 +23,10 @@
                         answered &nbsp;<span class="asked-ago">{{timestamp_date_formatted}}</span>
                     </div>
                     <div class="details">
-                        <a href="#/profiles/{{user}}">{{user}}</a>
                         <img src="{{gravatar_url}}" alt="avatar" />
+                        <a href="#/profiles/{{user}}">{{user}}</a>
+                        <div class="reputation {{user_hash}}">0</div>
+
 
                     </div>
                 </div>
