--- a/templates/topic-show.html
+++ b/templates/topic-show.html
@@ -38,6 +38,7 @@
                             <div class="details">
                                 <a href="#/profiles/{{user}}">{{user}}</a>
                                 <img src="{{gravatar_url}}" alt="avatar" />
+                                <div class="reputation {{user_hash}}">0</div>
 
                             </div>
                         </div>
