--- a/static/css/main.less
+++ b/static/css/main.less
@@ -286,3 +286,20 @@ a.comment-link:hover {
     font-size: 120%;
     margin-right: 2px;
 }
+
+.tag-link {
+    font-size: 11px;
+    font-weight: normal;
+    display: inline-block;
+    background-color: #F7FDFF;
+    text-decoration: none;
+    white-space: nowrap;
+    overflow: visible;
+    margin: 2px 2px 6px 0;
+    padding: 0.1em 0.8em;
+    line-height: 1.4;
+    border: 1px solid #C0D4DB;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+}
