--- a/templates/topic-new.html
+++ b/templates/topic-new.html
@@ -25,6 +25,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="control-group">
+                    <label class="control-label" for="topicTags">Tags</label>
+                    <div class="controls">
+                        <select name="tags" id="topicTags" multiple data-placeholder="Enter at least one tag.">
+
+
+                        </select>
+                    </div>
+                </div>
                 <div class="login-please loggedout row" style="display: none;">
                     <div class="span3 offset3">
                         <a class="login-action" href="#">Please log in</a>
